--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
     </style>
 </head>
 <body>
-    <header style="background-color: rgba(160, 223, 202, 0.472);">
-        <h1>Graph 130 Spring 2024</h1>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-        <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to</p>
+    <header>
+        <h1 style="background-color: #81bf7a;">Emily Decker</h1>
+        <h2>Everett Community College, GRAPH 130: Coding for Web Design</h2>
+
+        <h3>How many quarters have you attended EvCC?</h3>
+        <p>4 quarters.</p>
+
+        <h3>What degree/certificate program are you pursuing?</h3>
+        <p>Associates of Arts and Sciences Direct Transfer Degree. Going to major in computer science at WWU.</p>
+
+        <h3>Why did you choose this degree/certificate?</h3>
+        <p>It allowed me to explore my interests and determine what I want to major in while still working towards a Bachlors. Computer science is really interesting to me, I seem suited for it, and its a wide field with a lot of opportunities.</p>
+
+        <h3>What artist/designer inspires you? Why?</h3>
+        <p>I don't really follow designers.</p>
+
+        <h3>What is your favorite color?</h3> <!--use a hex code and style ans with it-->
+        <p style="color: #81bf7a;">I like minty greens, like 81bf7a.</p>
     </header>
-    <nav style="background-color: rgb(96, 159, 208); font-family: Georgia, 'Times New Roman', Times, serif;">link 1 link 2 link 3</nav>
-    <main style="background-color: antiquewhite;">
-        <h2>Everett Community College</h2>
-        <h2>Emily Decker</h2>
-
-
-    </main>
 </body>
 </html>
