--- a/Pages/history-refactor.html
+++ b/Pages/history-refactor.html
@@ -6,6 +6,7 @@
     <title>History of the Internet: Refactor</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link href="../Styles/history.css" rel="stylesheet" type="text/css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <nav class="pure-g sample">
@@ -47,15 +48,28 @@
             <img src="../Images/8-tim-berners-lee.jpg" alt="Tim Berners-Lee" width="500px">
             <p>(Published text has always been marked up so that the author and publisher would be able to synchronize and layout a publication the way it has been envisioned. 
             TBL created a markup language that tells a web browser how to visually display a page the way the “author” envisioned it.) </p>
-        </section>
-        <section>
             <img src="../Images/7-proof-marks.jpg" alt="Proof Marks" width="500px">
-            <p>mark</p>
-            <img>
+        </section>
+
+        <section data-aos="fade-up"
+        data-aos-duration="3000" class="pure-u-1-3">
+            <p>Marc Andereessen added an image tag to HTML and founded Netscape - 1993</p>
+            <img src="../Images/9-marc-andreessen.jpg" alt="Marc Andreessen" width="500px">
+        </section>
+
+        <section class="pure-u-1-3">
+            <p>During the 90’s there were browser wars and HTML was becoming fragmented. TBL created w3c. (https://www.w3.org/) to maintain HTML standards.</p>
+            <br><p><b>Version</b><br>
+                HTML 3.2 -1997<br>
+                HTML 4.01 - 1999<br>
+                XHTML - 2000<br>
+                HTML5 - 2014</p>
         </section>
 
 
-
+        <section class="pure-u-1-3">
+            <p>There have been many versions of HTML. We are currently in version HTML5 and many people don’t see a sixth one coming any time soon, if ever. </p>
+        </section>
 
     <!--<header>
         <h1>A Brief History of the Internet</h1>
@@ -71,5 +85,11 @@
 
 <p>There have been many versions of HTML. We are currently in HTML5.</p>
 </main>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
+
 </body>
 </html>
