--- a/Pages/history-refactor.html
+++ b/Pages/history-refactor.html
@@ -17,24 +17,24 @@
         <div class="pure-u-1-5"><a>Cascade</a></div>
     </nav>
     <main class="pure-g">
-        <section class="pure-u-1-3">
+        <section data-aos="fade-down-right" data-aos-duration="1300" class="pure-u-1-3">
             <p><b>Dwight Eisenhower</b>- American politician and Army general who served as the 34th President of the United States from 1953 until 1961.</p>
             <img src="../Images/1-ike.jpg" alt="President Eisenhower" width="500px">
         </section>
 
-        <section class="pure-u-1-3">
+        <section data-aos="fade-down" data-aos-duration="1300" class="pure-u-1-3">
             <p>Sputnik the first artificial satellite launched into space.</p>
             <img src="../Images/2-sputnik-1957.jpg" alt="Sputnik" width="500px"><br>
             <img src="../Images/3-news-10-1957.jpg" alt="Newspaper" width="500px">
         </section>
 
-        <section class="pure-u-1-3">
+        <section data-aos="fade-down-left" data-aos-duration="1300" class="pure-u-1-3">
             <p><b>ARPA</b> - (Advanced Research Project Agency) later DARPA (defense)</p>
             <img src="../Images/4-arpanet2.gif" alt="ARPA" height="300px"><br>
             <img src="../Images/5-early-arpanet.jpg" alt="ARPA" width="500px">
         </section>
 
-        <section class="pure-u-1-3">
+        <section data-aos="fade-right" data-aos-duration="1300" class="pure-u-1-3">
             <p>"The Internet as we know it really got started in the early 1960s. That was when J.C.R. Licklider — a computer scientist with technology company Bolt, Beranek and Newman
                 (BBN) — formulated a few unique ideas about global networking in a series of memos, describing an <b>"Intergalactic Computer Network."</b><br>
                His idea: link computers together across the globe; and anybody near a computer could share information. As it turns out, Licklider had the right idea at the right time. 
@@ -43,7 +43,7 @@
            <img src="../Images/6-apranet-82.jpg" alt="ARPA" width="500px">
         </section>
 
-        <section class="pure-u-1-3">
+        <section data-aos="zoom-in" data-aos-duration="1100" class="pure-u-1-3">
             <p>Tim Berners-Lee developed the first HTML (Hypertext Markup Language) in 1989</p>
             <img src="../Images/8-tim-berners-lee.jpg" alt="Tim Berners-Lee" width="500px">
             <p>(Published text has always been marked up so that the author and publisher would be able to synchronize and layout a publication the way it has been envisioned. 
@@ -51,39 +51,28 @@
             <img src="../Images/7-proof-marks.jpg" alt="Proof Marks" width="500px">
         </section>
 
-        <section data-aos="fade-up"
-        data-aos-duration="3000" class="pure-u-1-3">
+        <section data-aos="fade-left" data-aos-duration="1300" class="pure-u-1-3">
             <p>Marc Andereessen added an image tag to HTML and founded Netscape - 1993</p>
             <img src="../Images/9-marc-andreessen.jpg" alt="Marc Andreessen" width="500px">
         </section>
 
-        <section class="pure-u-1-3">
-            <p>During the 90’s there were browser wars and HTML was becoming fragmented. TBL created w3c. (https://www.w3.org/) to maintain HTML standards.</p>
-            <br><p><b>Version</b><br>
+        <section data-aos="fade-up-right" data-aos-duration="1300" class="pure-u-1-3">
+            <p>During the 90’s there were browser wars and HTML was becoming fragmented. TBL created w3c. <a href="https://www.w3.org/" target="blank">(https://www.w3.org/)</a> to maintain HTML standards.</p>
+            <img src="../Images/11-html5.png" alt="HTML 5" width="500px">
+            <p><b>Version</b><br>
                 HTML 3.2 -1997<br>
                 HTML 4.01 - 1999<br>
                 XHTML - 2000<br>
                 HTML5 - 2014</p>
         </section>
 
-
-        <section class="pure-u-1-3">
+        <section data-aos="fade-up" data-aos-duration="1300" class="pure-u-1-3">
+            <img src="../Images/12-w3c.png" alt="w3c" width="500px">
             <p>There have been many versions of HTML. We are currently in version HTML5 and many people don’t see a sixth one coming any time soon, if ever. </p>
         </section>
 
-    <!--<header>
-        <h1>A Brief History of the Internet</h1>
-    </header>-->
 
 
-
-
-
-
-
-
-
-<p>There have been many versions of HTML. We are currently in HTML5.</p>
 </main>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
