--- a/stewRecipe/stew-recipe.html
+++ b/stewRecipe/stew-recipe.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="stew.css" rel="stylesheet" type="text/css">
     <title>Stew Recipe</title>
     <style>
         i {
             color: brown;
         }
-    </style>
 
-    <link href="stew.css" rel="stylesheet" type="text/css">
+        .stew-content {
+            width: 560px;
+        }
+    </style>
 </head>
 <body>
     <div class="stew-content">
