finalizing optimizing images

--- a/Pages/optimizing-images.html
+++ b/Pages/optimizing-images.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Optimizing Images</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="../Styles/navigation.css" rel="stylesheet" type="text/css">
     <style>
         .loki {
             background-color: #FFDDBA;
-            width: 700px;
+            width: 750px;
             padding: 7px;
             margin: 5px;
             float: left;
@@ -18,6 +22,29 @@
             color: #011c40;
             vertical-align: top;
             margin-left: 5px;
+            font-family: "Roboto", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+        }
+        .clear {
+            clear: both;
+        }
+        .leo {
+            background-color: #011c40;
+            width: 750px;
+            padding: 0px 5px 5px 0px;
+        }
+        .leo img {
+            vertical-align: top;
+            margin: 10px 5px 0px 3px;
+        }
+        h1 {
+            font-family: "Tiny5", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            color: #035aa6;
+            text-decoration: underline overline #e77f07;
+            /*033e8c*/
         }
     </style>
 </head>
@@ -29,9 +56,10 @@
         <li><a href="/Pages/history-refactor.html">History</a></li>
         <li><a href="/Pages/stew-recipe.html">Stew Recipe</a></li>
         <li><a href="/Pages/cascades.html">Cascades</a></li>
+        <li><a href="/Pages/optimizing-images.html">Images</a></li>
     </ul>
 </nav>
-
+<h1>Optimizing Images</h1>
     <article class="loki">
         <img src="../Images/80.jpg" alt="80% jpg sample, orange jellyfish in bright blue water" width="400px">
         <section class="leroy">
@@ -74,6 +102,20 @@
         </section>
     </article>
 
-    
+    <div class="clear"></div>
+
+    <article class="leo">
+        <img src="../Images/01.jpg" alt="cream jellyfish in ocean" width="400px">
+        <img src="../Images/02.jpg" alt="rose jellyfish in deep ocean" width="400px">
+        <img src="../Images/03.jpg" alt="brightly colored jellyfish" width="400px">
+        <img src="../Images/04.jpg" alt="jellyfish and it's tentacles" width="400px">
+        <img src="../Images/05.jpg" alt="upside down jellyfish" width="400px">
+        <img src="../Images/06.jpg" alt="group of small jellyfish" width="400px">
+        <img src="../Images/07.jpg" alt="orange jellyfish" width="400px">
+        <img src="../Images/08.jpg" alt="group of jellyfish" width="400px">
+        <img src="../Images/09.jpg" alt="blue and yellow jellyfish" width="400px">
+        <img src="../Images/10.jpg" alt="small blue jellyfish" width="400px">
+    </article>
+
 </body>
 </html>
