--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graph 130</title>
+    <link href="../Graph130/Styles/navigation.css" rel="stylesheet" type="text/css">
     <style>
         h2 {
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -14,7 +15,17 @@
     <header>
         <h1 style="background-color: #81bf7a;">Emily Decker</h1>
         <h2>Everett Community College, GRAPH 130: Coding for Web Design</h2>
-
+    </header>
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="#">Theatre Bill</a></li>
+            <li><a href="/Pages/history-refactor.html">History</a></li>
+            <li><a href="/Pages/stew-recipe.html">Stew Recipe</a></li>
+            <li><a href="/Pages/cascades.html">Cascades</a></li>
+            <li><a href="/Pages/optimizing-images.html">Images</a></li>
+        </ul>
+    </nav>
         <h3>How many quarters have you attended EvCC?</h3>
         <p>4 quarters.</p>
 
@@ -29,6 +40,5 @@
 
         <h3>What is your favorite color?</h3> <!--use a hex code and style ans with it-->
         <p style="color: #81bf7a;">I like minty greens, like 81bf7a.</p>
-    </header>
 </body>
 </html>
