added refactor to index

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="#">Theatre Bill</a></li>
-            <li><a href="/Pages/history-refactor.html">History</a></li>
+            <li><a href="../Graph130/HistoryProject/historyContent/historyProject.html">History</a></li>
             <li><a href="/Pages/stew-recipe.html">Stew Recipe</a></li>
             <li><a href="/Pages/cascades.html">Cascades</a></li>
+            <li><a href="/Pages/history-refactor.html">Refactor</a></li>
             <li><a href="/Pages/optimizing-images.html">Images</a></li>
         </ul>
     </nav>
