fixed index's links, hopefully

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <li><a href="../index.html">Home</a></li>
             <li><a href="#">Theatre Bill</a></li>
             <li><a href="../Graph130/HistoryProject/historyContent/historyProject.html">History</a></li>
-            <li><a href="/Pages/stew-recipe.html">Stew Recipe</a></li>
-            <li><a href="/Pages/cascades.html">Cascades</a></li>
-            <li><a href="/Pages/history-refactor.html">Refactor</a></li>
-            <li><a href="/Pages/optimizing-images.html">Images</a></li>
+            <li><a href="/Graph130/Pages/stew-recipe.html">Stew Recipe</a></li>
+            <li><a href="/Graph130/Pages/cascades.html">Cascades</a></li>
+            <li><a href="/Graph130/Pages/history-refactor.html">Refactor</a></li>
+            <li><a href="/Graph130/Pages/optimizing-images.html">Images</a></li>
         </ul>
     </nav>
         <h3>How many quarters have you attended EvCC?</h3>
