--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="/Graph130/index.html">Home</a></li>
             <li><a href="#">Theatre Bill</a></li>
-            <li><a href="../Graph130/HistoryProject/historyContent/historyProject.html">History</a></li>
+            <li><a href="/Graph130/HistoryProject/historyContent/historyProject.html">History</a></li>
             <li><a href="/Graph130/Pages/stew-recipe.html">Stew Recipe</a></li>
             <li><a href="/Graph130/Pages/cascades.html">Cascades</a></li>
             <li><a href="/Graph130/Pages/history-refactor.html">Refactor</a></li>
