last round of updates for now

--- a/Pages/optimizing-images.html
+++ b/Pages/optimizing-images.html
@@ -12,7 +12,7 @@
     <style>
         .loki {
             background-color: #FFDDBA;
-            width: 750px;
+            width: 820px;
             padding: 7px;
             margin: 5px;
             float: left;
@@ -31,12 +31,17 @@
         }
         .leo {
             background-color: #011c40;
-            width: 750px;
+            width: 830px;
             padding: 0px 5px 5px 0px;
+            margin-left: 5px;
         }
         .leo img {
+            display: inline;
+            width: 400px;
             vertical-align: top;
             margin: 10px 5px 0px 3px;
+            padding-left: 5px;
+            width: auto;
         }
         h1 {
             font-family: "Tiny5", sans-serif;
@@ -44,7 +49,10 @@
             font-style: normal;
             color: #035aa6;
             text-decoration: underline overline #e77f07;
-            /*033e8c*/
+        }
+        h1, nav {
+            margin: 5px;
+            width: 840px;
         }
     </style>
 </head>
